# adk-workshop

./: .env  .gitignore  README.md  gchat.json  ingest_gchat_to_firestore.py  poem.txt  pyproject.toml  requirements.txt
multi_tool_agent/: agent.py
samples/RAG_agent/: .env  agent.py  requirements.txt
samples/RAG_agent/util/: ingest_gchat_to_firestore.py  main.py
samples/ReAct/: agent.py
samples/deployment/multi_tool_agent/: agent.py  deploy.py  dockerfile
samples/quickstart_agent/: agent.py
